--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.3",
-        "twig/twig": "~2.12.5 || ~2.13.1"
+        "twig/twig": "^2.12.5 || ^3.0.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
