--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
+        "pestphp/pest": "^1.0",
         "phpunit/phpunit": "^9.3",
+        "symfony/var-dumper": "^5.2",
         "vimeo/psalm": "^3.11"
     },
     "autoload": {
@@ -36,7 +38,7 @@
     },
     "scripts": {
         "psalm": "vendor/bin/psalm",
-        "test": "vendor/bin/phpunit",
+        "test": "vendor/bin/pest",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
         "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
     },
