--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "twig/twig": "^2.12.5 || ^3.0.0"
     },
     "require-dev": {
