--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": ">= 8.1 < 8.4",
         "twig/twig": ">=3.9"
     },
     "require-dev": {
