--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,15 @@
         }
     ],
     "require": {
-        "php": ">= 8.1 < 8.4",
-        "twig/twig": ">=3.9"
+        "php": "^7.4|^8.0",
+        "twig/twig": "^2.12.5 || >=3.0 <3.9"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "pestphp/pest": "^2.0",
-        "phpunit/phpunit": "^10.1",
-        "symfony/var-dumper": "^5.2"
+        "pestphp/pest": "^1.0",
+        "phpunit/phpunit": "^9.3",
+        "symfony/var-dumper": "^5.2",
+        "vimeo/psalm": "^3.11"
     },
     "autoload": {
         "psr-4": {
